--- a/src/languages/languages.json
+++ b/src/languages/languages.json
@@ -1,11 +1,7 @@
 {
-  "zh-TW": {
-    "title": "懶人Kubectl"
-  },
-  "zh-CN": {
-    "title": "懒人Kubectl"
-  },
-  "en-US": {
-    "title": "LazyKubectl"
+  "title": {
+    "zh-TW": "懶人Kubectl",
+    "zh-CN": "懒人Kubectl",
+    "en-US": "LazyKubectl"
   }
 }
